--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,10 +1,13 @@
 @import './base.css';
 
 #app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-
+  display: flex;
+  /* max-width: 1280px; */
+  margin: 0 0 0 0;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  /* padding: 2rem; */
   font-weight: normal;
 }
 
@@ -21,7 +24,7 @@ a,
   }
 }
 
-@media (min-width: 1024px) {
+/* @media (min-width: 1024px) {
   body {
     display: flex;
     place-items: center;
@@ -32,4 +35,4 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
-}
+} */
